# holyduck

./: .gitignore  BUILDING.md  CHANGELOG.md  DOCKER_WORKFLOW.md  HD_vs_duckdb-engine.md  HOLYDUCK_VS_ALISQL.md  HOLYDUCK_VS_CS.md  INSTALLATION.md  INTERNALS.md  LICENSE  LICENSE-COMMERCIAL  NEXT.md  PERFORMANCE_NOTES.md  PROJECT_STATUS.md  README.md  TECHNICAL.md  TESTING.md  THIRD_PARTY_NOTICES.md  TPC_H_NOTES.md  WRITING_SQL.md
comparisons/: HD_vs_AliSQL.md  HD_vs_CS.md  HD_vs_duckdb-engine.md
debug/: gdb-attach.sh  watch-init-scan.gdb  watch-q16-q20.gdb  watch-q20.gdb
docker/: base-debian12.dockerfile  base-oracle8.dockerfile  base-oracle9.dockerfile  base-ubuntu.dockerfile  dev-ubuntu.dockerfile  ubuntu.dockerfile
docs/: FEASIBILITY_STUDY_RESULTS.md  MARIADB_DUCKDB_INTEGRATION_SUCCESS.md  bug_count_star_theft.md  bug_tostring_slow_path.md  design_smart_injection.md  streaming_query_fix.md  task_insert_select_cross_engine.md  task_normalize_build_info.md
lib/: COPYRIGHT.md
plugin-out-oracle8/auth_pam_tool_dir/: auth_pam_tool
plugin-out-oracle9/auth_pam_tool_dir/: auth_pam_tool
plugin-out-ubuntu/: holyduck_duckdb_extensions.sql
plugin-out-ubuntu/auth_pam_tool_dir/: auth_pam_tool
scripts/: build-all.pl  build-base.sh  build-dev.sh  build_and_test.pl  cmake-setup.sh  deploy.sh  docker-build.sh  docker-run.sh  fetch-deps.sh  release.pl  release.sh
scripts/archive/: regression_run.sh
sql/: duckdb_mariadb_compat.sql  holyduck_duckdb_extensions.sql  holyduck_mariadb_functions.sql  holyduck_mariadb_tables.sql
src/: CMakeLists.txt  ha_duckdb.cc  ha_duckdb.h
tests/: catch_q20.gdb  demo_integration.c  test_duckdb_c.c
tests/performance/: run.pl  setup.sh  setup.sql  teardown.sql
tests/regression/: 001_pushed_select.expected  001_pushed_select.sql  002_pushed_derived_pure.expected  002_pushed_derived_pure.sql  003_pushed_select_multi_table.expected  003_pushed_select_multi_table.sql  004_cross_engine_join.expected  004_cross_engine_join.sql  005_cte_maria_into_duck.sql  006_cte_innodb_join_inside_duck.expected  006_cte_innodb_join_inside_duck.sql  007_macros.expected  007_macros.sql  008_join_types.expected  008_join_types.sql  009_ctas.expected  009_ctas.sql  010_mixed_engine_nation.expected  run.pl  run.sh  (+9 more)
(+43 files in other folders)
